Samet//26.01.2026/V8 US27 tamam